--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,10 @@ web-build/
 
 # macOS
 .DS_Store
+/.idea/.gitignore
+/.idea/discord.xml
+/.idea/jpa-buddy.xml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/NativeList.iml
+/.idea/vcs.xml
